--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/register": "^7.15.3",
-    "babel-polyfill": "^6.26.0",
+    "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.15.8",
+    "@babel/register": "^7.15.3",
     "@freshbooks/api": "^2.1.0",
     "axios": "^0.23.0",
+    "babel-polyfill": "^6.26.0",
     "express": "^4.17.1",
     "twilio": "^3.69.0"
   },
